src/objects/c2g__SalesTaxCalculationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>c2g__AccountNumber__c</fullName>
        <description>The Avalara account number (or user name)</description>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ConnectionUrl__c</fullName>
        <description>The URL required to connect to Avalara</description>
        <label>Connection URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>c2g__CountryCodeFilter__c</fullName>
        <description>List of country codes for addresses that will be validated</description>
        <label>Address Validation Country Code Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCodeSuffix__c</fullName>
        <description>Optional suffix for document codes in Avalara</description>
        <label>Document Code Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the integration with AvaTax</description>
        <label>Enable External Sales Tax Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__LicenseKey__c</fullName>
        <description>The Avalara access key (or password)</description>
        <label>License Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RecordFullDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate that the system should record full sales tax details for each line</description>
        <label>Record Full Sales Tax Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Street__c</fullName>
        <description>The street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SummaryTaxCode__c</fullName>
        <description>A dummy tax code used to represent summarised tax on an invoice line. The user must create a tax code with the same name. The tax rates are arbitrary as these will be generated by AvaTax</description>
        <label>Summary Tax Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ZipPostCode__c</fullName>
        <description>The zip or postal code</description>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Sales Tax Calculation Settings (FF)</label>
</CustomObject>